# rust-file-monitor

./: .gitignore  Cargo.toml
src/: history.rs  lib.rs  main.rs  model.rs  summary.rs
